--- a/Ui/Styles.xaml
+++ b/Ui/Styles.xaml
@@ -42,4 +42,11 @@
     <Setter Property="Background" Value="{DynamicResource Glass}" />
     <Setter Property="CornerRadius" Value="10" />
   </Style>
+
+  <Style Selector="Border.card">
+    <Setter Property="Padding" Value="5" />
+    <Setter Property="Margin" Value="0,0,0,10" />
+    <Setter Property="CornerRadius" Value="10" />
+    <Setter Property="Background" Value="{DynamicResource Glass}" />
+  </Style>
 </Styles>
